public/scss/components/_top-bar.scss
// //
// // Top Bar Variables
// //
// $include-html-top-bar-classes: $include-html-classes;
// $header-color: #666666;
// $topbar-divider-border-bottom: solid 1px scale-color(lightgray, $lightness: 13%);
// $topbar-arrows: false;
.top-bar {
    .title-area {
        h1 {
            color: $white;
        }
    }
    .top-bar-section {
        > ul {
          // :not('.top-bar--inner')
            &.left:first-child:not(.top-bar--inner) {
                margin-left: $column-gutter;
            }
        }

        ul {
            font-size: rem-calc(14);
            li {
                > a {
                    text-transform: capitalize;
                    min-height: rem-calc(60);
                    padding-left: rem-calc(0 30) !important;
                    padding-right: rem-calc(0 30) !important;
                    > [class^="icon-"] {
                      font-size: rem-calc(22);
                      vertical-align: middle;
                    }
                }
                > div {
                  background-color: $topbar-link-bg;
                }
                &:not(.no-border) {
                  &:before {
                    width: rem-calc(1);
                    height: rem-calc(12);
                    background: rgba(255, 255, 255, 0.5);
                    content: "";
                    position: absolute;
                    top: rem-calc(24);
                  }
                }
                &:last-child {
                    > a {
                        padding-right: rem-calc(20) !important;
                        display: flex;
                        align-items: center;
                        i {
                            line-height: 1rem;
                            position: relative;
                        }
                    }
                }
            }
            &.dropdown {
                width: auto;
                min-width: 80%;
                max-width: 80%;
                padding-top: rem-calc(5);
                @include border-radius($global-radius $global-radius);
                @include box-shadow('0 30px 40px rgba(0, 0, 0, 0.2)');
                @media #{$medium-up}{
                    right: rem-calc(26) !important;
                }
                li {
                    min-width: 60%;
                    > a {
                        line-height: rem-calc(50);
                        min-width: 100%;
                        min-height: initial;
                        i{
                            margin-right: rem-calc(20);
                            // display: inline-block;
                            // float: left;
                        }
                        i,span{
                            line-height: 3.5rem;
                            display: inline-block;
                            float: left;
                        }
                    }
                    &:first-child {
                        @include border-radius($global-radius $global-radius 0 0);
                    }
                    &:last-child {
                        @include border-radius(0 0 $global-radius $global-radius);
                        span{
                            min-width: initial;
                        }
                    }
                    &:before {
                        display: none;
                    }
                }
                &--company-switcher{
                    min-width: rem-calc($company-switcher-width);
                    width: rem-calc($company-switcher-width);
                    right: auto !important;
                    padding: rem-calc(12);
                    margin-left: rem-calc(- $company-switcher-width/2);
                    left: 50%;
                    background: $company-switcher-bg-color;
                    li {
                        width: 25%;
                        min-width: 25%;
                        background: $dropdown-link-bg-color;
                        margin-top: 0;
                        padding: 5px;
                        &:first-child,
                        &:last-child{
                            margin-top: 0;
                            @include border-radius('0');
                        }
                        a {
                            padding: 0 3% !important;
                            img {
                                @include border-radius($company-switcher-width/4);
                                width: 100%;
                            }
                        }
                    }
                }
            }
        }

      &__query-input {
        width: rem-calc(220);
        font-size: rem-calc(12);
        border-radius: rem-calc($global-radius);

        &.with-select {
          border-top-left-radius: rem-calc(0);
          border-bottom-left-radius: rem-calc(0);
          border-left: none;
        }
      }

      &__query-select {
        width: rem-calc(80);
        font-size: rem-calc(12);
        border-top-left-radius: rem-calc($global-radius);
        border-bottom-left-radius: rem-calc($global-radius);
        padding: 0 0.5rem;
        border-right: none;
      }

      &__message-type-select {
        width: rem-calc(180);
        font-size: rem-calc(12);
        border-radius: rem-calc($global-radius);
      }

    }
    &--inner{
        height: $topbar-inner-height;
        background: $topbar-inner-bg-color;
        .date-range-picker {
          margin: 1rem 0 0;
          color: $white;
        }

        .top-bar-section{
            @extend .row;
            padding-right: $column-gutter;

            ul{
                li{
                    background: $topbar-inner-item-bg-color;
                    margin-right: $column-gutter/2;
                    a{
                        display: flex;
                        color: $topbar-inner-link-color;
                        background: $topbar-inner-link-bg-color !important;
                        min-height: 1.75rem;
                        &.active{
                            color: $topbar-inner-link-color-active;
                        }
                    }
                    &:before {
                        display: none;
                    }
                    &:first-child {
                       margin-left: $column-gutter;
                    }
                    &:last-child {
                      margin-right: $column-gutter;
                    }
                }
                &.tab--inverted{
                    a{
                        position: relative;
                        &.active{
                            $arrowWidth: 8px;
                            $arrowHeight: 5px;
                            &:before{
                                content: "";
                                margin-left: -($arrowWidth/2);
                                position: absolute;
                                left: 50%;
                                bottom: $arrowHeight;
                                @include arrowUp($body-bg-color-1, 8px, 5px);
                            }
                        }
                    }
                }
                &.right{
                    button{
                        @extend .button--primary;
                    }

                    li {
                      margin-right: $column-gutter/2;

                      &:last-child {
                        margin-right: 0;
                      }
                    }
                }

                .button, button {
                  &:first-letter {
                    text-transform: capitalize;
                  }

                  &.circle {
                    top: rem-calc(12);
                  }
                }
            }
        }
    }
}

